--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "ext-json": "*"
   },
   "version": "0.1",
+  "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
       "Panco\\MP\\": "src"
