--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "ext-curl": "*",
     "ext-json": "*"
   },
-  "minimum-stability": "dev",
+  "version": "0.1",
   "autoload": {
     "psr-4": {
       "Panco\\MP\\": "src"
